daily-pt-ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-deployment
  labels:
    tier: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: ai
  template:
    metadata:
      name: ai-deployment
      labels:
        tier: ai
    spec:
      containers:
      - name: ai-deployment
        image: suhwan11/daily-pt-ai:3
        ports:
          - containerPort: 5000
            protocol: TCP
