daily-pt-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      name: backend-deployment
      labels:
        tier: backend
    spec:
      containers:
      - name: backend-deployment
        image: suhwan11/daily-pt-backend:21
        ports:
          - containerPort: 8080
            protocol: TCP
