daily-pt-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      name: frontend-deployment
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend-deployment
        image: suhwan11/daily-pt-frontend:16
        ports:
          - containerPort: 80
            protocol: TCP
