daily-pt-ai-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  labels:
    tier: ai
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    tier: ai
