daily-pt-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    tier: backend
