daily-pt-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    tier: frontend
