daily-pt-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: "daily-pt.com"
      http:
        paths:
        - backend:
            service:
              name: frontend-service
              port:
                number: 80
          pathType: Prefix
          path: /
